# GMT-Scripts

./: .gitignore  .pylintrc  README.md  pyproject.toml
gmtscripts/utils/: cormap.py
