[tool.poetry]
name = "gmt-scripts"
version = "0.1.0"
description = ""
authors = ["ziyixi <ziyixi@mail.ustc.edu.cn>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.22.2"
pyproj = "^3.3.0"
scipy = "^1.8.0"
obspy = "^1.2.2"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
